# aider-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  HISTORY.md  MIGRATION.md  Makefile  README.md  agents.md  pytest.ini
.github/workflows/: ci.yml  multi-lang-ci.yml  multiplatform-release.yml
aider/: commands.py  gui.py  repo.py
aider-cli/: Cargo.toml
aider-cli/src/: analytics.rs  args.rs  commands.rs  config.rs  help_patterns.rs  history.rs  lib.rs  main.rs  prompts.rs  reasoning.rs  repo.rs  repomap.rs  resources.rs  settings.rs  usage.rs  watch.rs
aider-cli/tests/: reasoning.rs  repomap.rs  repomap_ranking.rs  usage.rs
aider-core/: Cargo.toml  README.md
aider-core/analytics/: Cargo.toml
aider-core/analytics/src/: lib.rs
aider-core/analytics/tests/: history.rs
aider-core/cli_tui/: Cargo.toml
aider-core/cli_tui/src/: main.rs
aider-core/core/: Cargo.toml
aider-core/core/resources/prompts/: ask_main_system.txt  help_main_system.txt  patch_main_system.txt  udiff_main_system.txt  wholefile_main_system.txt
aider-core/core/src/: chat.rs  lib.rs  models.rs  repo.rs  repomap.rs  scrape.rs  voice.rs  watch.rs
aider-core/core/src/coders/: ask.rs  help.rs  mod.rs  patch.rs  search_replace.rs  udiff.rs  wholefile.rs
aider-core/core/tests/: urls.rs
aider-core/sidecar/: Cargo.toml
aider-core/sidecar/src/: main.rs
aider-go-bridge/: go.mod  main.go
aider/website/_data/: blame.yml
benchmark/: README.md  aggregate_test.go  go.mod  main.go
cli_tui/: Cargo.toml
cli_tui/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: analytics.rs  commands.rs  format_settings.rs  main.rs
crates/cli/tests/: browser.rs
crates/core/: Cargo.toml
crates/core/src/: args_formatter.rs  command.rs  commit.rs  copypaste.rs  diffs.rs  edit.rs  editor.rs  git.rs  help.rs  io.rs  lib.rs  model.rs  models.rs  onboarding.rs  run_cmd.rs  runner.rs  session.rs  udiff.rs  url.rs  utils.rs  voice.rs  watch.rs  watch_prompts.rs
crates/core/tests/: auto_fix.rs  diffs.rs  git_diff.rs  help.rs  prompts.rs  repo.rs  udiff.rs  watch.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  go_proxy.rs  lib.rs  llm.rs  models.rs  openai.rs  openrouter.rs  sendchat.rs  urls.rs
crates/llm/tests/: models.rs  sendchat.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs
dart_cli/: pubspec.yaml
dart_cli/lib/: analytics.dart  dart_cli.dart
dart_cli/lib/src/: config.dart  git.dart  http_client.dart  resources.dart  sidecar.dart  template.dart
dart_cli/test/: cli_test.dart  http_client_test.dart  sidecar_integration_test.dart  urls_test.dart
flutter_app/: .gitignore  pubspec.yaml
flutter_app/lib/: api.dart  chat_database.dart  frb_generated.dart  frb_generated.io.dart  grpc_client.dart  main.dart  settings_page.dart  widgets.dart
flutter_app/native/: Cargo.toml
flutter_app/native/src/: api.rs  bridge_generated.rs  lib.rs
go-shell/: go.mod  go.sum  main.go  urls_test.go
go-shell/cmd/: history_prompts.go  history_prompts_test.go  root.go
go-shell/internal/analytics/: analytics.go
go-shell/internal/config/: config.go
go-shell/internal/resources/: resources.go
go-shell/internal/sidecar/: sidecar.go
go-shell/internal/tui/: tui.go
go-shell/sidecarclient/: README.md  client.go  client_test.go  sidecar_integration_test.go
go_cli/: go.mod  go.sum  main.go  main_test.go
proto/: aider.proto
requirements/: requirements-dev.in  requirements-dev.txt
resources/: model-metadata.toml  model-metadata.yml  model-settings.json  model-settings.toml
scripts/: build_sidecar.ps1  build_sidecar.sh  install.go  release.sh
tests/basic/: test_main.py
tests/browser/: test_browser.py
