[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/sidecar",
    "crates/llm",
    "crates/utils",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
git2 = "0.18"
ignore = "0.4"
notify = "8"
notify-debouncer-mini = { version = "0.7", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-python = "0.20"
diffy = "0.3"
similar = "2"
tera = "1.19"
axum = { version = "0.7", features = ["ws"] }
tonic = { version = "0.10", features = ["transport"] }
tokio-stream = "0.1"
semver = "1"
uuid = { version = "1", features = ["v4"] }
prost = "0.12"
tower = "0.4"
rustls = "0.21"
scraper = "0.17"
url = "2"
