[package]
name = "aider-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.7"
notify = "6"
ignore = "0.4"
directories = "5"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-python = "0.20"
tera = "1"
