[package]
name = "aider-cli"
version = "0.1.0"
edition = "2021"
[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.7"
serde_json = "1"
notify = "6"
ignore = "0.4"
directories = "5"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
aider-llm = { path = "../crates/llm" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
