[package]
name = "aider-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
