[package]
name = "aider-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
gix = "0.61"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-dart = "0.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
ignore = "0.4"
walkdir = "2"
notify = "6"
crossbeam-channel = "0.5"
tera = "1"
askama = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
moka = { version = "0.11", features = ["sync"] }
once_cell = "1"
futures-util = "0.3"
zstd = "0.12"
brotli = "3.3"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
llama-rs = "0.0.0"
ollama-rs = "0.3"
scraper = "0.18"
pandoc = { version = "0.8", optional = true }
cpal = "0.15"
whisper-rs = "0.11"

[features]
default = []
pandoc = ["dep:pandoc"]
playwright = []
