[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aider-core = { path = "../core" }
aider-analytics = { path = "../analytics" }
