[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aider-core = { path = "../core" }
aider-analytics = { path = "../analytics" }
crossterm = { version = "0.27", optional = false }
futures-util = { version = "0.3", features = ["sink"] }
