[package]
name = "aider-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aider-core = { path = "../core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
aider-utils = { path = "../utils" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
