[package]
name = "aider-core"
version = "0.1.0"
edition = "2021"

[dependencies]
    aider-llm = { path = "../llm" }
    anyhow = { workspace = true }
    thiserror = { workspace = true }
    serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
crossbeam-channel = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
diffy = { workspace = true }
similar = { workspace = true }
tera = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
rustls = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
cpal = "0.15"
whisper-rs = "0.15"

[dev-dependencies]
tempfile = "3"
httpmock = "0.6"
